..gap fixed

--- a/data/dmops/gardasee-hike/css/template.css
+++ b/data/dmops/gardasee-hike/css/template.css
@@ -174,7 +174,7 @@ footer a:hover {
     }
 
     .container {
-        margin: -40px 10px 40px;
+        margin: -40px 10px 10px;
         padding: 20px 15px;
     }
 
@@ -478,6 +478,6 @@ footer p {
 
 @media (max-width: 768px) {
     #extra-info {
-        margin: -20px 10px 20px;
+        margin: 0 10px 10px;
     }
 }
